# lab3

./: CMakeLists.txt  Project1.vcxproj.filters  Temperature.cc  Temperature.h  main.cpp  test_input.cc
Debug/: Project1.vcxproj  Temperature.cc  cmakelist.txt  vc141.idb
Debug/Project1.tlog/: CL.command.1.tlog  Project1.lastbuildstate
